<resources>
    <string name="app_name">Dey</string>
    <string name="background_image_alt">Background image</string>

    <string name="footer_home">Home</string>
    <string name="footer_agenda">Agenda</string>
    <string name="footer_settings">Settings</string>

    <string name="groet_ochtend">Goedemorgen</string>
    <string name="groet_middag">Goedemiddag</string>
    <string name="groet_avond">Goedenavond</string>

    <string name="activiteit_toevoegen">Activiteit toevoegen</string>

    <string name="planning">Planning</string>
    <string name="instellingen">Instellingen</string>
    <string name="addAgenda">Voeg toe</string>

    <string name="vandaag">vandaag</string>
    <string name="monday">maandag</string>
    <string name="tuesday">dinsdag</string>
    <string name="wednesday">woensdag</string>
    <string name="thursday">donderdag</string>
    <string name="friday">vrijdag</string>
    <string name="saturday">zaterdag</string>
    <string name="sunday">zondag</string>

    <string name="activiteit">Activiteit</string>
    <string name="naarAgendaTekst">Meer in planning</string>

    <string name="loading">aan het laden</string>
    <string name="niksVandaag">Niks vandaag</string>

    <string name="add">+</string>
    <string name="back">\></string>

    <string name="agendapuntPlaceholder">Agendapunt</string>
    <string name="save">Opslaan</string>
    <string name="dots">...</string>

</resources>
