<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_image_alt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/textview__planning"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:background="@drawable/rounded_corner"
        android:elevation="10dp"
        android:enabled="true"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/loading"
        android:textColor="@color/textPurple"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <TextView
        android:id="@+id/textview__agendaTekst"
        android:layout_width="73dp"
        android:layout_height="32dp"
        android:background="@drawable/rounded_corner"
        android:elevation="15dp"
        android:enabled="true"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/planning"
        android:textColor="@color/textPurple"
        app:layout_constraintBottom_toTopOf="@+id/textview__planning"
        app:layout_constraintStart_toStartOf="@+id/textview__planning" />

    <TextView
        android:id="@+id/textview__meerInPlanning"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:background="@drawable/rounded_corner"
        android:elevation="15dp"
        android:enabled="true"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/naarAgendaTekst"
        android:textColor="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textview__planning"
        app:layout_constraintTop_toBottomOf="@+id/textview__planning" />

    <TextView
        android:id="@+id/textview__activiteit"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:background="@drawable/rounded_corner"
        android:elevation="10dp"
        android:enabled="true"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/loading"
        android:textColor="@color/textPurple"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview__activiteitTekst"
        android:layout_width="73dp"
        android:layout_height="32dp"
        android:background="@drawable/rounded_corner"
        android:elevation="15dp"
        android:enabled="true"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/activiteit"
        android:textColor="@color/textPurple"
        app:layout_constraintBottom_toTopOf="@+id/textview__activiteit"
        app:layout_constraintStart_toStartOf="@+id/textview__activiteit" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:background="#00000000"
        android:contentDescription="@string/footer_home"
        android:transitionName="NavHomeButton"
        android:tint="#F86D70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_home" />

    <ImageButton
        android:id="@+id/agendaButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:background="#00000000"
        android:contentDescription="@string/footer_agenda"
        android:transitionName="NavAgendaButton"
        android:tint="#A9A9A9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_agenda" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:background="#00000000"
        android:contentDescription="@string/footer_settings"
        android:transitionName="NavSettingsButton"
        android:tint="#A9A9A9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_settings" />

    <TextView
        android:id="@+id/textView__greeting"
        android:layout_width="232dp"
        android:layout_height="69dp"
        android:fontFamily="@font/tenali_ramakrishna"
        android:text="@string/groet_ochtend"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="@+id/background_image"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/textview__vandaagtekst"
        android:layout_width="73dp"
        android:layout_height="32dp"
        android:background="@drawable/rounded_corner"
        android:elevation="15dp"
        android:enabled="true"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/vandaag"
        android:textColor="@color/textPurple"
        app:layout_constraintBottom_toTopOf="@+id/textview__vandaag"
        app:layout_constraintStart_toStartOf="@+id/textview__vandaag" />

    <TextView
        android:id="@+id/textview__vandaag"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:background="@drawable/rounded_corner"
        android:elevation="10dp"
        android:enabled="true"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="@string/vandaag"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>