<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_image_alt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background"
        />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:background="#00000000"
        android:contentDescription="@string/footer_home"
        android:transitionName="NavHomeButton"
        android:tint="#A9A9A9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_home" />

    <ImageButton
        android:id="@+id/agendaButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:background="#00000000"
        android:contentDescription="@string/footer_agenda"
        android:transitionName="NavAgendaButton"
        android:tint="#A9A9A9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_agenda" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:background="#00000000"
        android:contentDescription="@string/footer_settings"
        android:transitionName="NavSettingsButton"
        android:tint="#F86D70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>