<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddAgenda">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_image_alt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/textView__greeting"
        android:layout_width="232dp"
        android:layout_height="69dp"
        android:fontFamily="@font/tenali_ramakrishna"
        android:text="@string/addAgenda"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background_image"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/circle"
        android:text="@string/back"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView__greeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toEndOf="@+id/textView__greeting"
        app:layout_constraintTop_toTopOf="@+id/textView__greeting" />

    <EditText
        android:id="@+id/input_text"
        android:layout_width="349dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/agendapuntPlaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_date"
        app:layout_constraintVertical_bias="0.0" />

    <DatePicker
        android:id="@+id/input_date"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:background="@drawable/circle"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_text"
        app:layout_constraintVertical_bias="0.378" />


</androidx.constraintlayout.widget.ConstraintLayout>