<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AgendaActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_image_alt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:background="#00000000"
        android:contentDescription="@string/footer_home"
        android:transitionName="NavHomeButton"
        android:tint="#A9A9A9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_home" />

    <ImageButton
        android:id="@+id/agendaButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:background="#00000000"
        android:contentDescription="@string/footer_agenda"
        android:transitionName="NavAgendaButton"
        android:tint="#F86D70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_agenda" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:background="#00000000"
        android:contentDescription="@string/footer_settings"
        android:transitionName="NavSettingsButton"
        android:tint="#A9A9A9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_settings" />

    <TextView
        android:id="@+id/textView__greeting"
        android:layout_width="232dp"
        android:layout_height="69dp"
        android:fontFamily="@font/tenali_ramakrishna"
        android:text="@string/planning"
        android:textColor="#000000"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="@+id/background_image"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/circle"
        android:text="@string/add"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView__greeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toEndOf="@+id/textView__greeting"
        app:layout_constraintTop_toTopOf="@+id/textView__greeting" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/agenda_points_container"
        android:layout_width="362dp"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/background_image"
        app:layout_constraintTop_toTopOf="@+id/background_image"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/loading"
        android:layout_width="72dp"
        android:layout_height="74dp"
        app:layout_constraintBottom_toBottomOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="@+id/background_image"
        app:layout_constraintStart_toStartOf="@+id/background_image"
        app:layout_constraintTop_toTopOf="@+id/background_image"
        app:srcCompat="@drawable/ic_loader" />

</androidx.constraintlayout.widget.ConstraintLayout>